--- a/homeworks/dmytro.kondaurov_DmitriyKondaurov/10-components/tic-tac-toe/src/app/components/game-dashboard/game-dashboard.component.html
+++ b/homeworks/dmytro.kondaurov_DmitriyKondaurov/10-components/tic-tac-toe/src/app/components/game-dashboard/game-dashboard.component.html
@@ -1,4 +1,4 @@
 <div class="dashboard">
-  <button class="dashboard__btn" type="button">Reset current game</button>
-  <button class="dashboard__btn" type="button">Reset all</button>
+  <button class="dashboard__btn" type="button" data-reset-cur-btn>Reset current game</button>
+  <button class="dashboard__btn" type="button" data-reset-all-btn>Reset all</button>
 </div>
