--- a/homeworks/dmytro.kondaurov_DmitriyKondaurov/10-components/tic-tac-toe/src/app/components/game-state/game-state.component.html
+++ b/homeworks/dmytro.kondaurov_DmitriyKondaurov/10-components/tic-tac-toe/src/app/components/game-state/game-state.component.html
@@ -1,1 +1,29 @@
-<p>game-state works!</p>
+<div class="game-state">
+  <div class="game-state__player-container">
+    <div>
+      <span class="game-state__player-icon">
+        <svg class="player-icon" width="36" height="36" viewBox="0 0 36 36" fill="none"
+             xmlns="http://www.w3.org/2000/svg">
+          <path d="M2.64596 2.56477L0.757935 4.45956L7.58753 11.2892L14.4239 18.1255L7.58753 24.9619L0.757935 31.7915L2.64596 33.6863L4.54076 35.5743L11.3704 28.7447L18.2067 21.9083L25.0431 28.7447L31.8727 35.5743L33.7675 33.6863L35.6555 31.7915L28.8259 24.9619L21.9895 18.1255L28.8259 11.2892L35.6555 4.45956L33.7675 2.56477L31.8727 0.676735L25.0431 7.50633L18.2067 14.3427L11.3704 7.50633L4.54076 0.676735L2.64596 2.56477Z" fill="white"/>
+        </svg>
+      </span>
+      <span class="game-state__player-name game-state__player-name--first-player">Player 1</span>
+    </div>
+    <div class="game-state__player-score game-state__player-score--first-player">
+      <span class="player-score__value player-score__value--first-player" data-player1-score="0">0</span>
+    </div>
+  </div>
+  <div class="game-state__player-container">
+    <div>
+      <span class="game-state__player-icon">
+        <svg class="player-icon" width="41" height="42" viewBox="0 0 41 42" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M39 21C39 31.5391 30.6721 40 20.5 40C10.3279 40 2 31.5391 2 21C2 10.4609 10.3279 2 20.5 2C30.6721 2 39 10.4609 39 21Z" stroke="white" stroke-width="4"/>
+        </svg>
+      </span>
+      <span class="game-state__player-name game-state__player-name--second-player">Player 2</span>
+    </div>
+    <div class="game-state__player-score game-state__player-score--second-player">
+      <span class="player-score__value player-score__value--second-player" data-player2-score="0">0</span>
+    </div>
+  </div>
+</div>
