--- a/homeworks/dmytro.kondaurov_DmitriyKondaurov/10-components/tic-tac-toe/src/app/components/game-field/game-field.component.css
+++ b/homeworks/dmytro.kondaurov_DmitriyKondaurov/10-components/tic-tac-toe/src/app/components/game-field/game-field.component.css
@@ -16,8 +16,8 @@
 }
 
 .game-field {
-  width: 620px;
-  height: 620px;
+  width: 360px;
+  height: 360px;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -35,8 +35,35 @@
 }
 
 .game-field__item {
-  width: 185px;
-  height: 185px;
+  width: 115px;
+  height: 115px;
   list-style: none;
   background-color: #C4C4C4;
+}
+
+@media only screen and (min-width: 500px) {
+
+  .game-field {
+    width: 470px;
+    height: 470px;
+  }
+
+  .game-field__item {
+    width: 140px;
+    height: 140px;
+  }
+}
+
+
+@media only screen and (min-width: 768px) {
+
+  .game-field {
+    width: 620px;
+    height: 620px;
+  }
+
+  .game-field__item {
+    width: 185px;
+    height: 185px;
+  }
 }
