--- a/homeworks/dmytro.kondaurov_DmitriyKondaurov/10-components/tic-tac-toe/src/app/components/game-field/game-field.component.html
+++ b/homeworks/dmytro.kondaurov_DmitriyKondaurov/10-components/tic-tac-toe/src/app/components/game-field/game-field.component.html
@@ -1,14 +1,20 @@
 <div class="display-current-player">
-  <span>
-    <svg class="player-icon" width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
-      <path d="M2.64596 2.56477L0.757935 4.45956L7.58753 11.2892L14.4239 18.1255L7.58753 24.9619L0.757935 31.7915L2.64596 33.6863L4.54076 35.5743L11.3704 28.7447L18.2067 21.9083L25.0431 28.7447L31.8727 35.5743L33.7675 33.6863L35.6555 31.7915L28.8259 24.9619L21.9895 18.1255L28.8259 11.2892L35.6555 4.45956L33.7675 2.56477L31.8727 0.676735L25.0431 7.50633L18.2067 14.3427L11.3704 7.50633L4.54076 0.676735L2.64596 2.56477Z" fill="white"/>
-    </svg>
-  </span>
-  <span class="display-current-player__player-name">Player 1 turn</span>
+  <span *ngIf="turn; then thenBlock else elseBlock"></span>
+    <ng-template #thenBlock>
+      <svg class="player-icon" width="36" height="36" fill="none">
+        <use xlink:href="#cross" href="#cross"></use>
+      </svg>
+    </ng-template>
+    <ng-template #elseBlock>
+      <svg class="player-icon" width="41" height="42" fill="none">
+        <use xlink:href="#circle" href="#circle"></use>
+      </svg>
+    </ng-template>
+  <span class="display-current-player__player-name" *ngIf="turn">{{turn ? 'Player 1 turn' : 'Player 2 turn'}}</span>
 </div>
 <div class="game-field">
   <ul class="game-field__row game-field__row--first" data-first-column>
-    <li class="game-field__item" data-item></li>
+    <li class="game-field__item" data-item (click)="onClick()"></li>
     <li class="game-field__item" data-item></li>
     <li class="game-field__item" data-item></li>
   </ul>
