--- a/homeworks/dmytro.kondaurov_DmitriyKondaurov/10-components/tic-tac-toe/src/app/components/game-field/game-field.component.css
+++ b/homeworks/dmytro.kondaurov_DmitriyKondaurov/10-components/tic-tac-toe/src/app/components/game-field/game-field.component.css
@@ -41,6 +41,22 @@
   background-color: #C4C4C4;
 }
 
+.action.active1, .action.active2 {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.action.active1 {
+  background-color: #A5D9F6;
+}
+
+.action.active2 {
+  background-color: #A5A6F6;
+}
+
 @media only screen and (min-width: 500px) {
 
   .game-field {
