--- a/homeworks/dmytro.kondaurov_DmitriyKondaurov/10-components/tic-tac-toe/src/app/components/game-field/game-field.component.html
+++ b/homeworks/dmytro.kondaurov_DmitriyKondaurov/10-components/tic-tac-toe/src/app/components/game-field/game-field.component.html
@@ -1,4 +1,4 @@
-<div class="display-current-player">
+<div class="display-current-player active-{{turn}}">
   <span *ngIf="turn; then thenBlock else elseBlock"></span>
     <ng-template #thenBlock>
       <svg class="player-icon" width="36" height="36" fill="none">
