added score component

--- a/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/app.component.css
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/app.component.css
@@ -13,3 +13,9 @@
   font-family: "Roboto", sans-serif;
   margin-left: 25px;
 }
+
+.game-container {
+  display: flex;
+  margin-top: 60px;
+  margin-left: 210px;
+}
