--- a/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/app.component.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/app.component.html
@@ -1,20 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-</head>
-<body>
-    <header class="header">
-        <svg width="26" height="25">
-          <use xlink:href="assets/sprite.svg#logo"></use>
-        </svg>
-        <h1 class="header__title">Tic-Tac-Toe Game</h1>
-    </header>
-</body>
-</html>
+<header class="header">
+    <svg width="25">
+        <use xlink:href="assets/sprite.svg#logo"></use>
+    </svg>
+    <h1 class="header__title">Tic-Tac-Toe Game</h1>
+</header>
+<app-move></app-move>
+<div class="game-container">
+    <app-control></app-control>
+    <app-field></app-field>
+</div>
+
+
+
+
