--- a/homeworks/ihor.kropyvnyi_20-Igorek-21/10-components/game-10-components/src/app/app.component.css
+++ b/homeworks/ihor.kropyvnyi_20-Igorek-21/10-components/game-10-components/src/app/app.component.css
@@ -15,6 +15,11 @@
   padding-left: 45px;
 }
 
+.main-section {
+  margin: 0 auto;
+  max-width: 1550px;
+}
+
 .content-wrapper {
   display: flex;
   width: 100%;
