--- a/homeworks/ihor.kropyvnyi_20-Igorek-21/10-components/game-10-components/src/app/components/player-actions/player-actions.component.html
+++ b/homeworks/ihor.kropyvnyi_20-Igorek-21/10-components/game-10-components/src/app/components/player-actions/player-actions.component.html
@@ -1,11 +1,9 @@
 <div class="game-board" *ngFor="let items of state ; let i=index">
-  <div  (click)="onClickElement($event)"
-        class="game-board__item"
-        *ngFor="let item of items ; let k=index">
-    <div class="game-board__icon">
-      <svg>
-        <use class="icon" xlink:href=""></use>
-      </svg>
-  </div>
+  <div (click)="onClickElement(i + k * 3)"
+          class="game-board__item  game-board__item--{{squares[i+k*3]}}"
+          *ngFor="let item of  items ; let k=index">
+    <svg width="148" height="148">
+      <use [attr.href]="'../assets/svg/sprites.svg#' + squares[i+k*3] + '-icon' "></use>
+    </svg>
   </div>
 </div>
