fixed all icon and information panel

--- a/homeworks/ihor.kropyvnyi_20-Igorek-21/10-components/game-10-components/src/app/components/information-panel/information-panel.component.html
+++ b/homeworks/ihor.kropyvnyi_20-Igorek-21/10-components/game-10-components/src/app/components/information-panel/information-panel.component.html
@@ -2,7 +2,7 @@
   <div class="content-row">
     <div class="content-row content-row__information-player  content-row__information-player--one">
       <svg class="player__icon" width="35" height="35">
-        <use xlink:href="../assets/svg/sprites.svg#x-icon"></use>
+        <use xlink:href="./assets/svg/sprites.svg#x-icon"></use>
       </svg>
       <span class="content-player content-player__text" >Player 1</span>
     </div>
@@ -11,7 +11,7 @@
   <div class="content-row">
     <div class="content-row content-row__information-player  content-row__information-player--two">
       <svg class="player__icon" width="35" height="35">
-        <use xlink:href="../assets/svg/sprites.svg#0-icon"></use>
+        <use xlink:href="./assets/svg/sprites.svg#0-icon"></use>
       </svg>
       <span class="content-player content-player__text" >Player 2</span>
     </div>
