--- a/homeworks/ihor.kropyvnyi_20-Igorek-21/10-components/game-10-components/src/app/app.component.html
+++ b/homeworks/ihor.kropyvnyi_20-Igorek-21/10-components/game-10-components/src/app/app.component.html
@@ -11,13 +11,13 @@
   <div class="content-wrapper">
     <div *ngIf="isPlayerMove" class="content-wrapper__player-signboard content-wrapper__player-signboard--player-1">
       <svg class="player-scoreboard__icon" width="35" height="35">
-        <use xlink:href="../assets/svg/sprites.svg#x-icon"></use>
+        <use xlink:href="./assets/svg/sprites.svg#x-icon"></use>
       </svg>
       <span class="player-scoreboard__text">Player 1 turn</span>
     </div>
     <div *ngIf="!isPlayerMove" class="content-wrapper__player-signboard content-wrapper__player-signboard--player-2">
       <svg class="player-scoreboard__icon" width="35" height="35">
-        <use xlink:href="../assets/svg/sprites.svg#0-icon"></use>
+        <use xlink:href="./assets/svg/sprites.svg#0-icon"></use>
       </svg>
       <span class="player-scoreboard__text">Player 2 turn</span>
     </div>
