--- a/homeworks/ivan.bieliaiev_Ckakipaki/10-components/10-components/src/app/app.component.css
+++ b/homeworks/ivan.bieliaiev_Ckakipaki/10-components/10-components/src/app/app.component.css
@@ -4,10 +4,6 @@
   font-family: "Roboto", sans-serif;
 }
 
-body {
-  width: 100%;
-}
-
 .header {
   width: 100%;
   height: 56px;
@@ -17,37 +13,12 @@ body {
   align-items: center;
 }
 
-.header__logo {
-  display: flex;
-  align-items: center;
-  color: #FFF;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 24px;
-}
-
-.game-logo {
-  display: block;
-  margin: 0 22px 0 0;
-}
-
 .who-turn {
   width: 100%;
   max-width: 336px;
   margin: 62px auto;
   display: flex;
   height: 56px;
-  background: #A5D9F6;
-  align-items: center;
-  justify-content: start;
-  color: #FFF;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 24px;
-}
-
-.who-turn__icon {
-  margin: 0 40px 0 10px;
 }
 
 .game__container {
@@ -90,6 +61,33 @@ body {
 
 .game__item {
   background: #000;
+}
+
+.who-won {
+  position: fixed;
+  top: 150px;
+  right: 30px;
+  width: content-box;
+  padding: 5px 10px;
+  text-align: center;
+  height: content-box;
+  background: #456;
+  color: #FFF;
+  border-radius: 3px;
+  font-size: 20px;
+  animation: showWinner 1 3s linear;
+  opacity: 0;
+}
+
+@keyframes showWinner {
+
+  from, to {
+    opacity: 0;
+  }
+
+  50% {
+    opacity: 1;
+  }
 }
 
 @media screen and (max-width: 968px) {
