--- a/homeworks/ivan.bieliaiev_Ckakipaki/10-components/10-components/src/app/game/game.component.css
+++ b/homeworks/ivan.bieliaiev_Ckakipaki/10-components/10-components/src/app/game/game.component.css
@@ -20,14 +20,41 @@
   align-items: center;
 }
 
-.game__list__row div {
+.game-item {
   width: 185px;
   height: 185px;
   cursor: pointer;
-  border: 1px solid #123;
   display: flex;
   align-items: center;
   justify-content: center;
+  border: 0;
+  transition: all .3s linear;
+}
+
+.game-item__btn {
+  border: 0;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.game-item__default {
+  background: #C4C4C4;
+}
+
+.game-item__first-player {
+  background: #A5D9F6;
+}
+
+.game-item__second-player {
+  background: #A5A6F6;
+}
+
+.game-item:hover {
+  box-shadow: #4DB5A1 5px 5px;
 }
 
 @media screen and (max-width: 968px) {
