add resetCur logic to  dashboard component

--- a/homeworks/dmytro.kondaurov_DmitriyKondaurov/10-components/tic-tac-toe/src/app/components/game-dashboard/game-dashboard.component.html
+++ b/homeworks/dmytro.kondaurov_DmitriyKondaurov/10-components/tic-tac-toe/src/app/components/game-dashboard/game-dashboard.component.html
@@ -1,4 +1,5 @@
 <div class="dashboard">
-  <button class="dashboard__btn" type="button" (click)="resetCur()">Reset current game</button>
+  <button class="dashboard__btn" type="button" (click)="resetCur()">Reset current
+    game</button>
   <button class="dashboard__btn" type="button" >Reset all</button>
 </div>
