--- a/homeworks/dmytro.kondaurov_DmitriyKondaurov/10-components/tic-tac-toe/src/app/app.component.html
+++ b/homeworks/dmytro.kondaurov_DmitriyKondaurov/10-components/tic-tac-toe/src/app/app.component.html
@@ -11,7 +11,7 @@
 <div class="app-container">
   <div class="app-container__first-column">
     <app-game-state></app-game-state>
-    <app-game-dashboard [state]="state"></app-game-dashboard>
+    <app-game-dashboard (resetCurGame)="resetCurGame()"></app-game-dashboard>
   </div>
     <app-game-field [state]="state"></app-game-field>
 </div>
