--- a/homeworks/ihor.kropyvnyi_20-Igorek-21/10-components/game-10-components/src/app/app.component.html
+++ b/homeworks/ihor.kropyvnyi_20-Igorek-21/10-components/game-10-components/src/app/app.component.html
@@ -1,7 +1,7 @@
 <header class="main-header">
   <a class="header__logo-link" href="#">
     <svg width="25" height="26">
-      <use xlink:href="../assets/svg/sprites.svg#logo-icon"></use>
+      <use xlink:href="./assets/svg/sprites.svg#logo-icon"></use>
     </svg>
   </a>
   <h2 class="main-header__headline">Tic-Tac-Toe game</h2>
