--- a/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/field/move/move.component.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/field/move/move.component.html
@@ -1,8 +1,6 @@
 <div class="app-move__container">
-  <svg width="25">
+  <!--svg width="25">
     <use [attr.xlink:href]="playerMove"></use>
 </svg>
-    <p class="app-move__text">Player {{player}} Turn</p>
+    <p class="app-move__text">Player {{player}} Turn</p-->
 </div>
-
-
