--- a/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/app.component.css
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/app.component.css
@@ -17,5 +17,6 @@
 .game-container {
   display: flex;
   margin-top: 60px;
-  margin-left: 210px;
+  justify-content: space-around;
+  align-items: center;
 }
