--- a/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/field/field.component.css
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/10-components/tik-tak-toe/src/app/field/field.component.css
@@ -1,3 +1,15 @@
-body {
-  background-color: #FFF;
+.field {
+  display: flex;
+  width: 350px;
+  height: 350px;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+.field__square {
+  width: 100px;
+  height: 100px;
+  background-color: #C4C4C4;
+  cursor: pointer;
 }
