--- a/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/style_variables.css
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/style_variables.css
@@ -1,40 +1,40 @@
 html {
-  --clr-n40: #FD665E;
-  --clr-n10: #FFF;
-  --clr-n11: #FFF;
-  --clr-n17: #FF0;
-  --grad: #F9F9F9;
-  --clr-n20: #585858;
-  --clr-n100: #000;
-  --clr-n25: #444;
-  --fs-x: 112px;
-  --fs-t: 48px;
-  --fs-m: 14px;
-  --fs-s: 12px;
-  --fs-l: 16px;
-  --fs-t-r: 25px;
-  --ff-p: "Roboto", sans-serif;
-  --ff-h: "Merriweather", serif;
-  --fw-b: 900;
+  --color-n40: #FD665E;
+  --color-n10: #FFF;
+  --color-n11: #FFF;
+  --color-n17: #FF0;
+  --color-n13: #F9F9F9;
+  --color-n20: #585858;
+  --color-n100: #000;
+  --color-n25: #444;
+  --font-size-big: 112px;
+  --font-size-title: 48px;
+  --font-size-medium: 14px;
+  --font-size-small: 12px;
+  --font-size-large: 16px;
+  --font-sizes-title-mobile: 25px;
+  --font-family-paragraf: "Roboto", sans-serif;
+  --font-family-title: "Merriweather", serif;
+  --font-weight-bold: 900;
 
   scroll-behavior: smooth;
 }
 
-.html--night {
-  --clr-n40: #F97E77;
-  --clr-n10: #0D0D0D;
-  --clr-n15: #000;
-  --grad: linear-gradient(180deg, #0D0D0D 22%, #F9F9F9 300%);
-  --clr-n20: #FFF;
-  --clr-n100: #FFF;
+.html--dark {
+  --color-n40: #F97E77;
+  --color-n13: linear-gradient(180deg, #0D0D0D 22%, #F9F9F9 300%);
+  --color-n10: #0D0D0D;
+  --color-n15: #000;
+  --color-n20: #FFF;
+  --color-n100: #FFF;
 }
 
 .themes-toggle__button--halfmoon {
-  fill: var(--clr-n25);
+  fill: var(--color-n25);
 }
 
 .themes-toggle__button--sun {
-  fill: var(--clr-n100);
+  fill: var(--color-n100);
   animation-name: sun;
   animation-duration: 5s;
   animation-direction: alternate;
@@ -44,11 +44,11 @@ html {
 @keyframes sun {
 
   from {
-    fill: var(--clr-n11);
+    fill: var(--color-n11);
   }
 
   to {
-    fill: var(--clr-n17);
+    fill: var(--color-n17);
   }
 }
 
@@ -61,37 +61,37 @@ html {
 }
 
 body {
-  background-color: var(--clr-n10);
+  background-color: var(--color-n10);
   max-width: 1440px;
   margin: 0 auto;
-  color: var(--clr-n100);
+  color: var(--color-n100);
 }
 
 .button {
-  font-family: var(--ff-p);
+  font-family: var(--font-family-paragraf);
   border: none;
-  font-size: var(--fs-m);
+  font-size: var(--font-size-medium);
   cursor: pointer;
 }
 
 @keyframes flash {
 
   from {
-    background-color: var(--clr-n40);
-    color: var(--clr-n11)
+    background-color: var(--color-n40);
+    color: var(--color-n11)
   }
 
   to {
-    background-color: var(--clr-n10);
-    color: var(--clr-n40);
+    background-color: var(--color-n10);
+    color: var(--color-n40);
   }
 }
 
 .button--primary {
-  color: var(--clr-n11);
-  background-color: var(--clr-n40);
+  color: var(--color-n11);
+  background-color: var(--color-n40);
   border-radius: 4px;
-  font-weight: var(--fw-b);
+  font-weight: var(--font-weight-bold);
   padding: 15px 24px;
   animation-name: flash;
   animation-duration: 8s;
@@ -101,8 +101,8 @@ body {
 
 .button--secondary {
   margin-right: 30px;
-  background-color: var(--clr-n10);
-  color: var(--clr5);
+  background-color: var(--color-n10);
+  color: var(--color5);
 }
 
 .p__line-height {
@@ -110,7 +110,7 @@ body {
 }
 
 .logo {
-  fill: var(--clr-n40);
+  fill: var(--color-n40);
   width: 61px;
   animation-name: logo;
   animation-duration: 2s;
@@ -161,16 +161,16 @@ body {
 .menu__line {
   list-style-type: none;
   margin-right: 48px;
-  font-family: var(--ff-p);
-  font-size: var(--fs-m);
-  color: var(--clr5);
+  font-family: var(--font-family-paragraf);
+  font-size: var(--font-size-medium);
+  color: var(--color5);
 }
 
 .menu__link {
   position: relative;
   text-decoration: none;
   cursor: pointer;
-  color: var(--clr-n20);
+  color: var(--color-n20);
 }
 
 .menu__link::before {
@@ -178,7 +178,7 @@ body {
   position: absolute;
   width: 100%;
   height: 2px;
-  background: var(--clr-n40);
+  background: var(--color-n40);
   left: 0;
   bottom: -5px;
   transform: scale(0);
@@ -237,8 +237,8 @@ body {
 }
 
 .dreamhouse__title {
-  font-size: var(--fs-x);
-  font-family: var(--ff-h);
+  font-size: var(--font-size-big);
+  font-family: var(--font-family-title);
   line-height: 1;
   letter-spacing: -2px;
 }
@@ -279,8 +279,8 @@ body {
 }
 
 .dreamhouse__text {
-  font-family: var(--ff-p);
-  font-size: var(--fs-l);
+  font-family: var(--font-family-paragraf);
+  font-size: var(--font-size-large);
   line-height: 1;
   margin-bottom: 50px;
 }
@@ -291,8 +291,8 @@ body {
 }
 
 .design__text {
-  font-size: var(--fs-t);
-  font-family: var(--ff-h);
+  font-size: var(--font-size-title);
+  font-family: var(--font-family-title);
   line-height: 1;
   letter-spacing: -2px;
 }
@@ -312,8 +312,8 @@ body {
   width: 40%;
   display: flex;
   justify-content: flex-end;
-  font-size: var(--fs-t);
-  font-family: var(--ff-h);
+  font-size: var(--font-size-title);
+  font-family: var(--font-family-title);
   line-height: 1.25;
   letter-spacing: -2px;
 }
@@ -336,14 +336,14 @@ body {
 
 .archmove__icon {
   padding-top: 15px;
-  fill: var(--clr-n40);
-  stroke: var(--clr-n40);
+  fill: var(--color-n40);
+  stroke: var(--color-n40);
 }
 
 .archmove__icon--bird {
   padding-left: 5px;
   padding-top: 15px;
-  stroke: var(--clr-n40);
+  stroke: var(--color-n40);
 }
 
 .archmove__block {
@@ -358,8 +358,8 @@ body {
 }
 
 .archmove__text {
-  font-family: var(--ff-p);
-  font-size: var(--fs-l);
+  font-family: var(--font-family-paragraf);
+  font-size: var(--font-size-large);
   line-height: 1;
   padding-left: 40px;
 }
@@ -376,7 +376,7 @@ body {
 
 .dream-project {
   width: 100%;
-  background: var(--grad);
+  background: var(--color-n13);
 }
 
 .dream-project__container {
@@ -404,12 +404,12 @@ body {
 }
 
 .dream-project__text {
-  font-family: var(--ff-h);
-  font-size: var(--fs-t);
+  font-family: var(--font-family-title);
+  font-size: var(--font-size-title);
   line-height: 1;
   letter-spacing: -1px;
   margin-bottom: 72px;
-  font-weight: var(--fw-b);
+  font-weight: var(--font-weight-bold);
 }
 
 .footer {
@@ -431,8 +431,8 @@ body {
 
 .footer__line {
   list-style-type: none;
-  font-family: var(--ff-p);
-  font-size: var(--fs-s);
+  font-family: var(--font-family-paragraf);
+  font-size: var(--font-size-small);
   margin-right: 48px;
 }
 
@@ -478,13 +478,13 @@ body {
   }
 
   .dreamhouse__text {
-    font-family: var(--ff-p);
-    font-size: var(--fs-t-r);
+    font-family: var(--font-family-paragraf);
+    font-size: var(--font-sizes-title-mobile);
     line-height: 1;
   }
 
   .design__title {
-    font-size: var(--fs-t-r);
+    font-size: var(--font-sizes-title-mobile);
   }
 
   .design__photo {
