--- a/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/style_variables.css
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/style_variables.css
@@ -182,7 +182,7 @@ body {
   left: 0;
   bottom: -5px;
   transform: scale(0);
-  transition: .5s;
+  transition: transform .5s ease-out;
 }
 
 .menu__link:hover::before {
@@ -197,21 +197,21 @@ body {
 }
 
 .button__sign-in {
-  transition: .2s;
+  transition: transform .2s ease-in-out;
 }
 
 .button__sign-up {
-  transition: .2s;
+  transition: transform .2s ease-in-out;
 }
 
 .button__sign-in:hover {
   transform: scale(1.2);
-  transition: .2s;
+  transition: transform .2s ease-in-out;
 }
 
 .button__sign-up:hover {
   transform: scale(1.2);
-  transition: .2s;
+  transition: transform .2s ease-in-out;
 }
 
 .button__up--active {
@@ -262,12 +262,12 @@ body {
 }
 
 .dreamhouse__button {
-  transition: .2s;
+  transition: transform .2s ease-in-out;
 }
 
 .dreamhouse__button:hover {
   transform: scale(1.2);
-  transition: .2s;
+  transition: transform .2s ease-in-out;
 }
 
 .dreamhouse__photo-container {
@@ -366,12 +366,12 @@ body {
 
 .archmove__button {
   margin-left: 90px;
-  transition: .2s;
+  transition: transform .2s ease-in-out;
 }
 
 .archmove__button:hover {
   transform: scale(1.2);
-  transition: .2s;
+  transition-duration: transform .2s ease-in-out;
 }
 
 .dream-project {
