--- a/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/style_variables.css
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/style_variables.css
@@ -338,8 +338,6 @@ body {
 
 .archmove__icon--bird {
   padding-left: 5px;
-  padding-top: 15px;
-  stroke: var(--color-n40);
 }
 
 .archmove__block {
@@ -436,21 +434,20 @@ body {
   margin-right: 180px;
 }
 
-@media (max-width: 770px) {
+@media (max-width: 760px) {
 
   .header__content {
-    display: block;
+    display: flex;
+    justify-content: flex-end;
   }
 
   .header__menu {
     display: flex;
-    width: 100%;
     justify-content: center;
   }
 
   .header__buttons {
     display: flex;
-    width: 100%;
     justify-content: center;
   }
 
@@ -458,7 +455,7 @@ body {
     display: none;
   }
 
-  .dreamhouse__photo {
+  .dreamhouse__photo-container {
     display: none;
   }
 
