--- a/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/style_variables.css
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/style_variables.css
@@ -15,7 +15,7 @@ html {
   --font-size-medium: 14px;
   --font-size-small: 12px;
   --font-size-large: 16px;
-  --font-sizes-title-mobile: 25px;
+  --font-size-title-mobile: 25px;
   --font-family-paragraf: "Roboto", sans-serif;
   --font-family-title: "Merriweather", serif;
   --font-weight-bold: 900;
@@ -88,7 +88,7 @@ html {
 
 body {
   background-color: var(--color-n10);
-  max-width: 1440px;
+  max-width: 100%;
   margin: 0 auto;
   color: var(--color-n100);
 }
@@ -162,6 +162,10 @@ body {
   width: 70px;
 }
 
+.header__burger {
+  display: none;
+}
+
 .header__content {
   display: flex;
   height: 96px;
@@ -171,7 +175,6 @@ body {
 
 .header__menu {
   display: flex;
-  width: auto;
 }
 
 .menu__list {
@@ -220,7 +223,7 @@ body {
 .button__up--active {
   position: fixed;
   display: block;
-  right: 0;
+  right: 5%;
   bottom: 10%;
   width: 50px;
   height: 20px;
@@ -298,7 +301,6 @@ body {
 
 .design {
   width: 100%;
-  display: block;
   margin-bottom: 100px;
 }
 
@@ -377,12 +379,8 @@ body {
 }
 
 .dream-project__container {
-  width: 100%;
   display: flex;
-}
-
-.dream-project__photo-container {
-  margin-left: 100px;
+  justify-content: space-around;
 }
 
 .dream-project__content {
@@ -411,7 +409,7 @@ body {
 
 .footer {
   display: flex;
-  width: 100%;
+  max-width: 100%;
   height: 200px;
   align-items: center;
   justify-content: space-between;
@@ -419,11 +417,11 @@ body {
 
 .footer__menu {
   display: flex;
-  margin-left: 80px;
 }
 
 .footer__list {
   display: flex;
+  margin-left: 80px;
 }
 
 .footer__line {
@@ -437,21 +435,27 @@ body {
   margin-right: 180px;
 }
 
-@media (max-width: 760px) {
+@media (max-width: 770px) {
 
   .header__content {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
   }
 
-  .header__menu {
-    display: flex;
-    justify-content: center;
+  .header__burger {
+    display: none;
+  }
+
+  .menu__list {
+    display: block;
   }
 
   .header__buttons {
     display: flex;
-    justify-content: center;
+  }
+
+  .header__logo {
+    display: none;
   }
 
   .logo {
@@ -462,51 +466,106 @@ body {
     display: none;
   }
 
+  .dreamhouse {
+    margin-left: 0;
+  }
+
   .dreamhouse__aside {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 100%;
   }
 
   .dreamhouse__title {
-    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%;
+    font-size: 80px;
   }
 
   .dreamhouse__text {
     font-family: var(--font-family-paragraf);
-    font-size: var(--font-sizes-title-mobile);
+    font-size: var(--font-size-title-mobile);
     line-height: 1;
   }
 
   .design__title {
-    font-size: var(--font-sizes-title-mobile);
+    font-size: var(--font-size-title-mobile);
   }
 
-  .design__photo {
-    flex-direction: column;
-    align-items: center;
-    margin-left: auto;
-    margin-right: auto;
+  .design__photo-container {
+    display: block;
+    text-align: center;
+  }
+
+  .archmove {
+    max-width: 770px;
+  }
+
+  .archmove__container {
+    display: block;
+  }
+
+  .archmove__photo-container {
+    display: none;
   }
 
   .archmove__title {
     width: 70%;
   }
 
-  .archmove__content {
-    width: 70%;
-  }
-
-  .archmove__photo {
+  .dream-project__photo-container {
     display: none;
   }
 
-  .dream-project__photo {
-    display: none;
+  .dream-project__content {
+    padding-left: 0;
+  }
+
+  .footer__list {
+    display: block;
   }
 
   .footer__logo {
     display: none;
+  }
+
+  .button__up--active {
+    right: 10%;
+  }
+}
+
+@media (max-width: 400px) {
+
+  .dreamhouse__title {
+    font-size: 40px;
+  }
+
+  .design__text {
+    font-size: var(--font-size-title-mobile);
+  }
+
+  .archmove__title {
+    font-size: var(--font-size-title-mobile);
+  }
+
+  .dream-project__text {
+    font-size: var(--font-size-title-mobile);
+  }
+
+  .dreamhouse__text {
+    font-size: 15px;
+  }
+
+  .archmove__container {
+    padding-left: 0;
+  }
+
+  .archmove__block {
+    display: block;
+  }
+
+  .archmove__block--bird {
+    display: block;
   }
 }
