--- a/homeworks/nikolay.krasniuk_Kingstar22/10-components/src/styles.css
+++ b/homeworks/nikolay.krasniuk_Kingstar22/10-components/src/styles.css
@@ -4,3 +4,10 @@
   padding: 0;
   font-family: Roboto, sans-serif;
 }
+
+:root {
+  --background-field-color: #C4C4C4;
+  --color-player1: #87B2B9;
+  --color-player2: #A5A6F6;
+  --color-them: #78D4F1;
+}
